crates/zenith/tests/snapshots/screens__help_overlay_end__160x48__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys
                                ┌ keys ────────────────────────────────────────────────────────────────────────────────────────┐
                                │ The parameter form                                                                           │
                                │   Tab, ↓                  the next field                                                     │
                                │   Shift+Tab, ↑            the previous field                                                 │
                                │   Space                   toggle a boolean                                                   │
                                │   ←                       the previous fixed value, or the cursor left in text               │
                                │   →                       the next fixed value, or the cursor right in text                  │
                                │   Enter                   validate and run                                                   │
                                │                                                                                              │
                                │ Log                                                                                          │
                                │   e                       show errors only                                                   │
                                │   w                       warnings and up                                                    │
                                │   i                       information and up                                                 │
                                │   d                       debugging and up                                                   │
                                │   t                       everything                                                         │
                                │   ←                       one level fewer                                                    │
                                │   →                       one level more                                                     │
                                │   Enter                   the whole line                                                     │
                                │   c                       clear the tab                                                      │
                                │                                                                                              │
                                │ History                                                                                      │
                                │   Enter                   view the call                                                      │
                                │   r                       send the request again                                             │
                                │   e                       the request, on the command line                                   │
                                │   x                       write this connection as a recording for solar replay              │
                                │                                                                                              │
                                │ The envelope viewer                                                                          │
                                │   ←                       the previous call                                                  │
                                │   →                       the next call                                                      │
                                │   q, Ctrl+O               close                                                              │
                                │                                                                                              │
                                │ This help                                                                                    │
                                │   ?, q                    close                                                              │
                                │                                                                                              │
                                │ When SOLAR fails at the start                                                                │
                                │   r                       try again                                                          │
                                │   Enter                   go to the tabs, to read the Log                                    │
                                │   q                       quit                                                               │
                                │                                                                                              │
                                │ The mouse                                                                                    │
                                │   wheel                   scroll what is under the pointer; in a list, move the selection    │
                                │   Shift+drag              select text while ZENITH has the mouse; Option+drag in iTerm2      │
                                │   /mouse                  give the mouse to the terminal, and take it back                   │
                                │                                                                                              │
                                │ Every action has a plain key or a Ctrl key; Alt and the function keys are extra routes.      │
                                └ Esc close  ↑ ↓ scroll  ──────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-152 #868482 on #F5F1E8
 0:153-153 #8C4907 on #F5F1E8 bold
 0:154-159 #555355 on #F5F1E8
 1: 32-32  #868482 on #F5F1E8
 1: 33-38  #8C4907 on #F5F1E8 bold
 1: 39-127 #868482 on #F5F1E8
 2: 32-32  #868482 on #F5F1E8
 2: 34-51  #8C4907 on #F5F1E8 bold
 2:127-127 #868482 on #F5F1E8
 3: 32-32  #868482 on #F5F1E8
 3: 36-57  #8C4907 on #F5F1E8 bold
 3:127-127 #868482 on #F5F1E8
 4: 32-32  #868482 on #F5F1E8
 4: 36-57  #8C4907 on #F5F1E8 bold
 4:127-127 #868482 on #F5F1E8
 5: 32-32  #868482 on #F5F1E8
 5: 36-57  #8C4907 on #F5F1E8 bold
 5:127-127 #868482 on #F5F1E8
 6: 32-32  #868482 on #F5F1E8
 6: 36-57  #8C4907 on #F5F1E8 bold
 6:127-127 #868482 on #F5F1E8
 7: 32-32  #868482 on #F5F1E8
 7: 36-57  #8C4907 on #F5F1E8 bold
 7:127-127 #868482 on #F5F1E8
 8: 32-32  #868482 on #F5F1E8
 8: 36-57  #8C4907 on #F5F1E8 bold
 8:127-127 #868482 on #F5F1E8
 9: 32-32  #868482 on #F5F1E8
 9:127-127 #868482 on #F5F1E8
10: 32-32  #868482 on #F5F1E8
10: 34-36  #8C4907 on #F5F1E8 bold
10:127-127 #868482 on #F5F1E8
11: 32-32  #868482 on #F5F1E8
11: 36-57  #8C4907 on #F5F1E8 bold
11:127-127 #868482 on #F5F1E8
12: 32-32  #868482 on #F5F1E8
12: 36-57  #8C4907 on #F5F1E8 bold
12:127-127 #868482 on #F5F1E8
13: 32-32  #868482 on #F5F1E8
13: 36-57  #8C4907 on #F5F1E8 bold
13:127-127 #868482 on #F5F1E8
14: 32-32  #868482 on #F5F1E8
14: 36-57  #8C4907 on #F5F1E8 bold
14:127-127 #868482 on #F5F1E8
15: 32-32  #868482 on #F5F1E8
15: 36-57  #8C4907 on #F5F1E8 bold
15:127-127 #868482 on #F5F1E8
16: 32-32  #868482 on #F5F1E8
16: 36-57  #8C4907 on #F5F1E8 bold
16:127-127 #868482 on #F5F1E8
17: 32-32  #868482 on #F5F1E8
17: 36-57  #8C4907 on #F5F1E8 bold
17:127-127 #868482 on #F5F1E8
18: 32-32  #868482 on #F5F1E8
18: 36-57  #8C4907 on #F5F1E8 bold
18:127-127 #868482 on #F5F1E8
19: 32-32  #868482 on #F5F1E8
19: 36-57  #8C4907 on #F5F1E8 bold
19:127-127 #868482 on #F5F1E8
20: 32-32  #868482 on #F5F1E8
20:127-127 #868482 on #F5F1E8
21: 32-32  #868482 on #F5F1E8
21: 34-40  #8C4907 on #F5F1E8 bold
21:127-127 #868482 on #F5F1E8
22: 32-32  #868482 on #F5F1E8
22: 36-57  #8C4907 on #F5F1E8 bold
22:127-127 #868482 on #F5F1E8
23: 32-32  #868482 on #F5F1E8
23: 36-57  #8C4907 on #F5F1E8 bold
23:127-127 #868482 on #F5F1E8
24: 32-32  #868482 on #F5F1E8
24: 36-57  #8C4907 on #F5F1E8 bold
24:127-127 #868482 on #F5F1E8
25: 32-32  #868482 on #F5F1E8
25: 36-57  #8C4907 on #F5F1E8 bold
25:127-127 #868482 on #F5F1E8
26: 32-32  #868482 on #F5F1E8
26:127-127 #868482 on #F5F1E8
27: 32-32  #868482 on #F5F1E8
27: 34-52  #8C4907 on #F5F1E8 bold
27:127-127 #868482 on #F5F1E8
28: 32-32  #868482 on #F5F1E8
28: 36-57  #8C4907 on #F5F1E8 bold
28:127-127 #868482 on #F5F1E8
29: 32-32  #868482 on #F5F1E8
29: 36-57  #8C4907 on #F5F1E8 bold
29:127-127 #868482 on #F5F1E8
30: 32-32  #868482 on #F5F1E8
30: 36-57  #8C4907 on #F5F1E8 bold
30:127-127 #868482 on #F5F1E8
31: 32-32  #868482 on #F5F1E8
31:127-127 #868482 on #F5F1E8
32: 32-32  #868482 on #F5F1E8
32: 34-42  #8C4907 on #F5F1E8 bold
32:127-127 #868482 on #F5F1E8
33: 32-32  #868482 on #F5F1E8
33: 36-57  #8C4907 on #F5F1E8 bold
33:127-127 #868482 on #F5F1E8
34: 32-32  #868482 on #F5F1E8
34:127-127 #868482 on #F5F1E8
35: 32-32  #868482 on #F5F1E8
35: 34-62  #8C4907 on #F5F1E8 bold
35:127-127 #868482 on #F5F1E8
36: 32-32  #868482 on #F5F1E8
36: 36-57  #8C4907 on #F5F1E8 bold
36:127-127 #868482 on #F5F1E8
37: 32-32  #868482 on #F5F1E8
37: 36-57  #8C4907 on #F5F1E8 bold
37:127-127 #868482 on #F5F1E8
38: 32-32  #868482 on #F5F1E8
38: 36-57  #8C4907 on #F5F1E8 bold
38:127-127 #868482 on #F5F1E8
39: 32-32  #868482 on #F5F1E8
39:127-127 #868482 on #F5F1E8
40: 32-32  #868482 on #F5F1E8
40: 34-42  #8C4907 on #F5F1E8 bold
40:127-127 #868482 on #F5F1E8
41: 32-32  #868482 on #F5F1E8
41: 36-57  #8C4907 on #F5F1E8 bold
41:127-127 #868482 on #F5F1E8
42: 32-32  #868482 on #F5F1E8
42: 36-57  #8C4907 on #F5F1E8 bold
42:127-127 #868482 on #F5F1E8
43: 32-32  #868482 on #F5F1E8
43: 36-57  #8C4907 on #F5F1E8 bold
43:127-127 #868482 on #F5F1E8
44: 32-32  #868482 on #F5F1E8
44:127-127 #868482 on #F5F1E8
45: 32-32  #868482 on #F5F1E8
45: 34-120 #555355 on #F5F1E8
45:127-127 #868482 on #F5F1E8
46: 32-33  #868482 on #F5F1E8
46: 34-36  #8C4907 on #F5F1E8 bold
46: 37-44  #555355 on #F5F1E8
46: 45-47  #8C4907 on #F5F1E8 bold
46: 48-56  #555355 on #F5F1E8
46: 57-127 #868482 on #F5F1E8
47:  0-2   #868482 on #F5F1E8
47:  3-3   #8C4907 on #F5F1E8
47:  4-6   #868482 on #F5F1E8
47:  7-17  #8C4907 on #F5F1E8 bold
47: 18-20  #555355 on #F5F1E8
47: 28-32  #868482 on #F5F1E8
47: 33-42  #555355 on #F5F1E8
47: 50-54  #868482 on #F5F1E8
47: 55-63  #555355 on #F5F1E8
47: 67-159 #868482 on #F5F1E8
