crates/zenith/tests/snapshots/screens__help_overlay_end__160x48__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys
                                ┌ keys ────────────────────────────────────────────────────────────────────────────────────────┐
                                │ The parameter form                                                                           │
                                │   Tab, ↓                  the next field                                                     │
                                │   Shift+Tab, ↑            the previous field                                                 │
                                │   Space                   toggle a boolean                                                   │
                                │   ←                       the previous fixed value, or the cursor left in text               │
                                │   →                       the next fixed value, or the cursor right in text                  │
                                │   Enter                   validate and run                                                   │
                                │                                                                                              │
                                │ Log                                                                                          │
                                │   e                       show errors only                                                   │
                                │   w                       warnings and up                                                    │
                                │   i                       information and up                                                 │
                                │   d                       debugging and up                                                   │
                                │   t                       everything                                                         │
                                │   ←                       one level fewer                                                    │
                                │   →                       one level more                                                     │
                                │   Enter                   the whole line                                                     │
                                │   c                       clear the tab                                                      │
                                │                                                                                              │
                                │ History                                                                                      │
                                │   Enter                   view the call                                                      │
                                │   r                       send the request again                                             │
                                │   e                       the request, on the command line                                   │
                                │   x                       write this connection as a recording for solar replay              │
                                │                                                                                              │
                                │ The envelope viewer                                                                          │
                                │   ←                       the previous call                                                  │
                                │   →                       the next call                                                      │
                                │   q, Ctrl+O               close                                                              │
                                │                                                                                              │
                                │ This help                                                                                    │
                                │   ?, q                    close                                                              │
                                │                                                                                              │
                                │ When SOLAR fails at the start                                                                │
                                │   r                       try again                                                          │
                                │   Enter                   go to the tabs, to read the Log                                    │
                                │   q                       quit                                                               │
                                │                                                                                              │
                                │ The mouse                                                                                    │
                                │   wheel                   scroll what is under the pointer; in a list, move the selection    │
                                │   Shift+drag              select text while ZENITH has the mouse; Option+drag in iTerm2      │
                                │   /mouse                  give the mouse to the terminal, and take it back                   │
                                │                                                                                              │
                                │ Every action has a plain key or a Ctrl key; Alt and the function keys are extra routes.      │
                                └ Esc close  ↑ ↓ scroll  ──────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-152 #646365 on #0B0C14
 0:153-153 #FFC23D on #0B0C14 bold
 0:154-159 #9C9A97 on #0B0C14
 1: 32-32  #646365 on #0B0C14
 1: 33-38  #FFC23D on #0B0C14 bold
 1: 39-127 #646365 on #0B0C14
 2: 32-32  #646365 on #0B0C14
 2: 34-51  #FFC23D on #0B0C14 bold
 2:127-127 #646365 on #0B0C14
 3: 32-32  #646365 on #0B0C14
 3: 36-57  #FFC23D on #0B0C14 bold
 3:127-127 #646365 on #0B0C14
 4: 32-32  #646365 on #0B0C14
 4: 36-57  #FFC23D on #0B0C14 bold
 4:127-127 #646365 on #0B0C14
 5: 32-32  #646365 on #0B0C14
 5: 36-57  #FFC23D on #0B0C14 bold
 5:127-127 #646365 on #0B0C14
 6: 32-32  #646365 on #0B0C14
 6: 36-57  #FFC23D on #0B0C14 bold
 6:127-127 #646365 on #0B0C14
 7: 32-32  #646365 on #0B0C14
 7: 36-57  #FFC23D on #0B0C14 bold
 7:127-127 #646365 on #0B0C14
 8: 32-32  #646365 on #0B0C14
 8: 36-57  #FFC23D on #0B0C14 bold
 8:127-127 #646365 on #0B0C14
 9: 32-32  #646365 on #0B0C14
 9:127-127 #646365 on #0B0C14
10: 32-32  #646365 on #0B0C14
10: 34-36  #FFC23D on #0B0C14 bold
10:127-127 #646365 on #0B0C14
11: 32-32  #646365 on #0B0C14
11: 36-57  #FFC23D on #0B0C14 bold
11:127-127 #646365 on #0B0C14
12: 32-32  #646365 on #0B0C14
12: 36-57  #FFC23D on #0B0C14 bold
12:127-127 #646365 on #0B0C14
13: 32-32  #646365 on #0B0C14
13: 36-57  #FFC23D on #0B0C14 bold
13:127-127 #646365 on #0B0C14
14: 32-32  #646365 on #0B0C14
14: 36-57  #FFC23D on #0B0C14 bold
14:127-127 #646365 on #0B0C14
15: 32-32  #646365 on #0B0C14
15: 36-57  #FFC23D on #0B0C14 bold
15:127-127 #646365 on #0B0C14
16: 32-32  #646365 on #0B0C14
16: 36-57  #FFC23D on #0B0C14 bold
16:127-127 #646365 on #0B0C14
17: 32-32  #646365 on #0B0C14
17: 36-57  #FFC23D on #0B0C14 bold
17:127-127 #646365 on #0B0C14
18: 32-32  #646365 on #0B0C14
18: 36-57  #FFC23D on #0B0C14 bold
18:127-127 #646365 on #0B0C14
19: 32-32  #646365 on #0B0C14
19: 36-57  #FFC23D on #0B0C14 bold
19:127-127 #646365 on #0B0C14
20: 32-32  #646365 on #0B0C14
20:127-127 #646365 on #0B0C14
21: 32-32  #646365 on #0B0C14
21: 34-40  #FFC23D on #0B0C14 bold
21:127-127 #646365 on #0B0C14
22: 32-32  #646365 on #0B0C14
22: 36-57  #FFC23D on #0B0C14 bold
22:127-127 #646365 on #0B0C14
23: 32-32  #646365 on #0B0C14
23: 36-57  #FFC23D on #0B0C14 bold
23:127-127 #646365 on #0B0C14
24: 32-32  #646365 on #0B0C14
24: 36-57  #FFC23D on #0B0C14 bold
24:127-127 #646365 on #0B0C14
25: 32-32  #646365 on #0B0C14
25: 36-57  #FFC23D on #0B0C14 bold
25:127-127 #646365 on #0B0C14
26: 32-32  #646365 on #0B0C14
26:127-127 #646365 on #0B0C14
27: 32-32  #646365 on #0B0C14
27: 34-52  #FFC23D on #0B0C14 bold
27:127-127 #646365 on #0B0C14
28: 32-32  #646365 on #0B0C14
28: 36-57  #FFC23D on #0B0C14 bold
28:127-127 #646365 on #0B0C14
29: 32-32  #646365 on #0B0C14
29: 36-57  #FFC23D on #0B0C14 bold
29:127-127 #646365 on #0B0C14
30: 32-32  #646365 on #0B0C14
30: 36-57  #FFC23D on #0B0C14 bold
30:127-127 #646365 on #0B0C14
31: 32-32  #646365 on #0B0C14
31:127-127 #646365 on #0B0C14
32: 32-32  #646365 on #0B0C14
32: 34-42  #FFC23D on #0B0C14 bold
32:127-127 #646365 on #0B0C14
33: 32-32  #646365 on #0B0C14
33: 36-57  #FFC23D on #0B0C14 bold
33:127-127 #646365 on #0B0C14
34: 32-32  #646365 on #0B0C14
34:127-127 #646365 on #0B0C14
35: 32-32  #646365 on #0B0C14
35: 34-62  #FFC23D on #0B0C14 bold
35:127-127 #646365 on #0B0C14
36: 32-32  #646365 on #0B0C14
36: 36-57  #FFC23D on #0B0C14 bold
36:127-127 #646365 on #0B0C14
37: 32-32  #646365 on #0B0C14
37: 36-57  #FFC23D on #0B0C14 bold
37:127-127 #646365 on #0B0C14
38: 32-32  #646365 on #0B0C14
38: 36-57  #FFC23D on #0B0C14 bold
38:127-127 #646365 on #0B0C14
39: 32-32  #646365 on #0B0C14
39:127-127 #646365 on #0B0C14
40: 32-32  #646365 on #0B0C14
40: 34-42  #FFC23D on #0B0C14 bold
40:127-127 #646365 on #0B0C14
41: 32-32  #646365 on #0B0C14
41: 36-57  #FFC23D on #0B0C14 bold
41:127-127 #646365 on #0B0C14
42: 32-32  #646365 on #0B0C14
42: 36-57  #FFC23D on #0B0C14 bold
42:127-127 #646365 on #0B0C14
43: 32-32  #646365 on #0B0C14
43: 36-57  #FFC23D on #0B0C14 bold
43:127-127 #646365 on #0B0C14
44: 32-32  #646365 on #0B0C14
44:127-127 #646365 on #0B0C14
45: 32-32  #646365 on #0B0C14
45: 34-120 #9C9A97 on #0B0C14
45:127-127 #646365 on #0B0C14
46: 32-33  #646365 on #0B0C14
46: 34-36  #FFC23D on #0B0C14 bold
46: 37-44  #9C9A97 on #0B0C14
46: 45-47  #FFC23D on #0B0C14 bold
46: 48-56  #9C9A97 on #0B0C14
46: 57-127 #646365 on #0B0C14
47:  0-2   #646365 on #0B0C14
47:  3-3   #FFC23D on #0B0C14
47:  4-6   #646365 on #0B0C14
47:  7-17  #FFC23D on #0B0C14 bold
47: 18-20  #9C9A97 on #0B0C14
47: 28-32  #646365 on #0B0C14
47: 33-42  #9C9A97 on #0B0C14
47: 50-54  #646365 on #0B0C14
47: 55-63  #9C9A97 on #0B0C14
47: 67-159 #646365 on #0B0C14
